--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,6 @@ jobs:
           #environmentID: 98798-a974f882-8ecg0-4c80-9901-a583778393987a
       #- run: npm install -g newman
       #- run: newman run "https://api.getpostman.com/collections/${{collectionID}}?apikey=${{ secrets.POSTMANAPIKEY }}" --environment "https://api.getpostman.com/environments/${{ environmentID }}?apikey=${{ secrets.POSTMANAPIKEY }}"      
+      - run: npm install -g newman
       - run: npm install -g newman-reporter-htmlextra
       - run: newman run trademe_api.postman_collection.json -e trademe_production.postman_environment.json --reporters cli,htmlextra --reporter-htmlextra-export report.html
